Revision history for {{$dist->name}}

{{$NEXT}}

5.027     2014-12-09 09:30:30-05:00 America/New_York
        - fix regression in Plugin->plugin_from_config which started passing a
          list of pairs rather than a hashref

5.026     2014-12-08 21:33:55-05:00 America/New_York
        - eliminate use of Moose::Autobox
        - various small performance optimizations
        - add "use_our" option to PkgVersion

5.025     2014-11-10 21:12:14-05:00 America/New_York
        - fix file.t failures with perl v5.14 and v5.16's Carp

5.024     2014-11-05 23:08:07-05:00 America/New_York
        - add the %Mint stash for minting defaults
        - quiet down some low-priority log lines
        - teeny tiny optimization by building dist prereqs structure lazily
        - avoid ever requiring v0 of ExtUtils::MakeMaker
        - fix a module-loading ordering issue in `dzil setup`

5.023     2014-10-30 22:56:42-04:00 America/New_York
        - optimizations to loading of heavyweight libraries in cmd line app
        - some tests are now skipped on Win32 to avoid filename insanity
        - files' added_by data should be more informative
        - conflicts with installed code is now detected and/or advertised

5.022     2014-10-27 22:55:53-04:00 America/New_York
        - several optimizations to how PPI is used
        - handle an empty ABSTRACT better
        - now properly merging distmeta fragments together without loss, using
          new CPAN::Meta::Merge
        - create Makefile.PL and Build.PL files earlier, so they're in the file
          list "the whole time"

5.021     2014-10-20 22:43:52-04:00 America/New_York
        - improve authordeps' ability to cope with version requirements and
          non-default plugin names
        - a few improvements to help given by "dzil help COMMAND"
        - fixes a situation where exclusion-regexp-building in GatherDir
          could mangle the given regexps